--- a/src.fileutils/dchmod.vcxproj
+++ b/src.fileutils/dchmod.vcxproj
@@ -79,6 +79,9 @@
   <ItemGroup>
     <ClInclude Include="futils.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="dchmod.cu" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
