--- a/src/libcu/libcu.vcxproj.filters
+++ b/src/libcu/libcu.vcxproj.filters
@@ -95,7 +95,6 @@
   <ItemGroup>
     <CudaCompile Include="libcu.cu" />
     <CudaCompile Include="program.cu" />
-    <CudaCompile Include="ctypecu.cu" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="includes">
@@ -149,5 +148,6 @@
       <Filter>sys</Filter>
     </None>
     <None Include="sentinel-gpu.cu" />
+    <None Include="ctypecu.cu" />
   </ItemGroup>
 </Project>
