--- a/src/libcu.jimtcl/libcu.jimtcl.vcxproj.filters
+++ b/src/libcu.jimtcl/libcu.jimtcl.vcxproj.filters
@@ -20,7 +20,6 @@
     <ClCompile Include="jim-aio.cu" />
     <ClCompile Include="jim-format.cu" />
     <ClCompile Include="jim-history.cu" />
-    <ClCompile Include="jim-interactive.cu" />
     <ClCompile Include="jim-load.cu" />
     <ClCompile Include="jim-namespace.cu" />
     <ClCompile Include="jim-pack.cu" />
@@ -60,5 +59,8 @@
     <Filter Include="_content">
       <UniqueIdentifier>{78e945d0-edef-4ecd-94e0-4b43a3cef4c6}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="jim-interactive.cu" />
   </ItemGroup>
 </Project>
